--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Repository to test candlestick pattern data. Give an input and it will return an buffer of the drawn candlestick pattern",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/anandanand84/draw-candlestick#readme",
   "dependencies": {
-    "canvas": "^2.0.0-alpha.15",
+    "canvas": "^2.0.0",
     "d3": "^4.4.0",
     "d3-scale": "^1.0.4"
   }
